TS_WP-04: added color instrument

--- a/web-painter-ts/index.html
+++ b/web-painter-ts/index.html
@@ -24,10 +24,10 @@
                     <img src="./public/icons/letter_icon.svg" alt="Pointer">
                 </div>
                 <div class="instruments__color">
-                    <label for="colorType">
+                    <label for="color">
                         <img src="./public/icons/palette_icon.svg" alt="Palette">
                     </label>
-                    <input type="color" name="color" id="colorType">
+                    <input type="color" name="color" id="color">
                 </div>
                 <div class="instruments__size" id="size">
                     <label for="rangeType">
