--- a/web-painter-ts/index.html
+++ b/web-painter-ts/index.html
@@ -33,7 +33,7 @@
                         <img src="./public/icons/range_icon.svg" alt="Range">
                     </label>
                     <div class="size__block">
-                        <input type="range" name="range" id="range" min="5" value="50" max="500">
+                        <input class="size" type="range" name="range" id="range" min="5" value="50" max="500">
                     </div>
                 </div>
                 <div class="instruments__file">
