TS_WP-07: added image uploader

--- a/web-painter-ts/index.html
+++ b/web-painter-ts/index.html
@@ -36,7 +36,7 @@
                         <input class="size" type="range" name="range" id="range" min="5" value="50" max="500">
                     </div>
                 </div>
-                <div class="instruments__file">
+                <div class="instruments__file" id="file-btn">
                     <label for="fileType">
                         <img src="./public/icons/upload_icon.svg" alt="Upload">
                     </label>
